# python-project

./: .example.env  .gitignore  README.md  pyproject.toml
src/: main.py  utils.py
